# timelines-mcp

./: .env.example  .gitignore  LICENSE  README.md  fastmcp.json  pyproject.toml
data/: timelines.db  timelines.db-shm  timelines.db-wal
data/chroma_db/: chroma.sqlite3
docs/: JWT_SETUP.md  QUICKSTART_JWT.md
examples/: query_by_location.py  service_usage.py
scripts/: generate_jwt.py  get_token.sh  setup_jwt_localhost.sh  test_server.sh
src/timelines_mcp/: __init__.py  __main__.py  auth.py  dependencies.py  factories.py  server.py  services.py
src/timelines_mcp/adapters/: chroma.py  sqlite.py
src/timelines_mcp/agents/: __init__.py
src/timelines_mcp/core/: __init__.py  factories.py
src/timelines_mcp/core/adapters/: __init__.py  chroma.py  sqlite.py
src/timelines_mcp/domain/: __init__.py  models.py  protocols.py  repository.py
src/timelines_mcp/services/: __init__.py  timeline_service.py
src/timelines_mcp/settings/: __init__.py  config.py
src/timelines_mcp/tools/: __init__.py  project_tools.py
tests/: __init__.py  conftest.py
tests/adapters/: __init__.py  conftest.py  test_chroma_adapter.py  test_sqlite_adapter.py
tests/domain/: conftest.py  test_domain_models.py  test_relationships.py
tests/repository/: conftest.py  test_repository.py
